# project-chimera

./: .coderabbit.yaml  .pre-commit-config.yaml  ACCEPTANCE_CRITERIA.md  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml
.cursor/rules/: agent.mdc  mcp-governance.mdc  project-chimera.mdc
.github/workflows/: ci.yml
backend/: __init__.py
config/: mcp-servers.json
docs/: mcp-config.md
docs/adr/: 0001-db-choice.md  0002-mcp-only-interaction.md  0003-ci-design.md  0004-agent-roles.md  README.md
frontend/: README.md  index.html
research/: tooling_strategy.md
schema/: 001_video_metadata.sql
skills/: README.md  __init__.py  budget_check.py  skills_interface.py  trend_fetcher.py
specs/: _meta.md  cicd.md  frontend_ux.md  functional.md  openclaw_integration.md  security.md  technical.md  testing_strategy.md  tooling_and_skills.md
tests/: test_budget_check.py  test_skills_interface.py  test_trend_fetcher.py
