[project]
name = "project-chimera"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coinbase-agentkit>=0.7.4",
    "google-genai>=1.61.0",
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
    "redis>=7.1.0",
    "weaviate-client>=4.19.2",
]

[tool.uv]
