[project]
name = "project-chimera"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coinbase-agentkit>=0.7.4",
    "google-genai>=1.61.0",
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
    "redis>=7.1.0",
    "weaviate-client>=4.19.2",
]

# Linting (governance; tests + interface code). Task 3 / SRS.
[tool.ruff]
target-version = "py312"
include = ["tests/**/*.py", "skills/**/*.py"]

[tool.ruff.lint]
# Enforce: unused imports, undefined names, basic style. No opinionated rules.
# E302/E303 omitted (preview-only in Ruff; would require preview = true).
select = [
    "F401",   # unused imports
    "F821",   # undefined names
    "W291",   # trailing whitespace
    "W293",   # blank line contains whitespace
]

[tool.uv]
